# vfn-preprocessing

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml
docs/: comparison-report.md
examples/: README.md  sample.txt
examples/EIT_results_01/: EIT_mistral.md  EIT_unstructured.MD  webapplicatie_technische_beschrijving_docling.md  webapplicatie_technische_beschrijving_markitdown.md
examples/EIT_results_02/: EIT_docling.md  EIT_mistral.md  EIT_unstructured_api.md
examples/bird_paper_results/: bird_paper_docling.md  bird_paper_markitdown.md  bird_paper_unstructured_io.md
tests/: test_base.py  test_converters.py
vfn_preprocessing/: __init__.py  base.py  cli.py  docling_converter.py  markitdown_converter.py  mistral_converter.py  unstructured_converter.py
